@@ -16,12 +16,14 @@ function Get-Permission
 {
     <#
     .SYNOPSIS
-    Gets the permissions (access control rules) for a path.
+    Gets the permissions (access control rules) for a file, directory, registry key, or certificate's private key.
     
     .DESCRIPTION
     Permissions for a specific identity can also be returned.  Access control entries are for a path's discretionary access control list.
     
     To return inherited permissions, use the `Inherited` switch.  Otherwise, only non-inherited (i.e. explicit) permissions are returned.
+
+    Certificate permissions are only returned if a certificate has a private key. If a certificate doesn't have a private key, `$null` is returned. 
     
     .OUTPUTS
     System.Security.AccessControl.AccessRule.
@@ -42,26 +44,31 @@ function Get-Permission
     Test-Permission
 
     .EXAMPLE
-    Get-Permission -Path C:\Windows
+    Get-Permission -Path 'C:\Windows'
     
     Returns `System.Security.AccessControl.FileSystemAccessRule` objects for all the non-inherited rules on `C:\windows`.
     
     .EXAMPLE
-    Get-Permission -Path hklm:\Software -Inherited
+    Get-Permission -Path 'hklm:\Software' -Inherited
     
     Returns `System.Security.AccessControl.RegistryAccessRule` objects for all the inherited and non-inherited rules on `hklm:\software`.
     
     .EXAMPLE
-    Get-Permission -Path C:\Windows -Idenity Administrators
+    Get-Permission -Path 'C:\Windows' -Idenity Administrators
     
     Returns `System.Security.AccessControl.FileSystemAccessRule` objects for all the `Administrators'` rules on `C:\windows`.
+
+    .EXAMPLE
+    Get-Permission -Path 'Cert:\LocalMachine\1234567890ABCDEF1234567890ABCDEF12345678'
+
+    Returns `System.Security.AccessControl.CryptoKeyAccesRule` objects for certificate's `Cert:\LocalMachine\1234567890ABCDEF1234567890ABCDEF12345678` private key. If it doesn't have a private key, `$null` is returned.
     #>
     [CmdletBinding()]
     [OutputType([System.Security.AccessControl.AccessRule])]
     param(
         [Parameter(Mandatory=$true)]
         [string]
-        # The path whose permissions (i.e. access control rules) to return.
+        # The path whose permissions (i.e. access control rules) to return. File system, registry, or certificate paths supported. Wildcards supported.
         $Path,
         
         [string]
@@ -82,8 +89,29 @@ function Get-Permission
             return
         }
     }
+
+    if( -not (Test-Path -Path $Path) )
+    {
+        Write-Error ('Path ''{0}'' not found.' -f $Path)
+        return
+    }
     
-    Get-Acl -Path $Path |
+    Invoke-Command -ScriptBlock {
+        Get-Item -Path $Path |
+            ForEach-Object { 
+                if( $_.PSProvider.Name -eq 'Certificate' )
+                {
+                    if( $_.HasPrivateKey -and $_.PrivateKey )
+                    {
+                        $_.PrivateKey.CspKeyContainerInfo.CryptoKeySecurity
+                    }
+                }
+                else
+                {
+                    $_.GetAccessControl([Security.AccessControl.AccessControlSections]::Access)
+                }
+            }
+        } |
         Select-Object -ExpandProperty Access |
         Where-Object { 
             if( $Inherited )
